--- a/src/main/webapp/channel/channel_report_by_bill_class_all.xhtml
+++ b/src/main/webapp/channel/channel_report_by_bill_class_all.xhtml
@@ -17,7 +17,7 @@
             <h:form>
                 <h:outputStylesheet library="css" name="printing.css"></h:outputStylesheet>
                 <p:panel  header="All Channel List">
-                    <h:panelGrid columns="2" styleClass="noPrintButton" id="pg1"> 
+                    <p:panelGrid columns="2" styleClass="noPrintButton" id="pg1"> 
                         <h:outputLabel value="From Date"/>
                         <p:datePicker id="frmDate" 
                                       value="#{channelReportController.fromDate}" 
@@ -36,19 +36,15 @@
                                       yearNavigator="true"
                                       pattern="dd MMMM yyyy HH:mm:ss"  >
                         </p:datePicker>
-                    </h:panelGrid>
+                    </p:panelGrid>
 
-                    <h:panelGrid columns="4">
-                        <p:spacer width="70" height="1"/>
-                        <p:commandButton ajax="false" id="btnRefresh" value="Process" 
+                    <h:panelGrid columns="2" class="mt-2">
+                        <p:commandButton class="mx-2" ajax="false" id="btnRefresh" value="Process" 
                                          action="#{channelReportController.channelAllBillList()}">
                         </p:commandButton>
-
-
                         <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" style="float: right;" >
                             <p:dataExporter type="xls" target="tbl1" fileName="channel_bill_list"  />
                         </p:commandButton>
-
                     </h:panelGrid>
                 </p:panel>
 
