--- a/src/main/webapp/channel/channel_report_by_bill_class_all.xhtml
+++ b/src/main/webapp/channel/channel_report_by_bill_class_all.xhtml
@@ -55,11 +55,11 @@
                         <br></br>
                         <h:outputLabel value="From : " style=" white-space:pre-line;"/>
                         <h:outputLabel  value="#{channelReportController.fromDate}" >
-                            <f:convertDateTime pattern="yyyy MMM dd hh:mm:ss a"/>
+                            <f:convertDateTime pattern="dd MMMM yyyy HH:mm:ss"/>
                         </h:outputLabel>                          
                         <h:outputLabel value="&emsp;&emsp;To :"/>
                         <h:outputLabel  value="#{channelReportController.toDate}" >
-                            <f:convertDateTime pattern="yyyy MMM dd hh:mm:ss a"/>
+                            <f:convertDateTime pattern="dd MMMM yyyy HH:mm:ss"/>
                         </h:outputLabel>
                     </f:facet>
 
@@ -75,7 +75,7 @@
                             <p:outputLabel value="Crteated Date" />
                         </f:facet>
                         <p:outputLabel value="#{b.createdAt}" >
-                            <f:convertDateTime pattern="dd MM yyyy hh:mm:ss a"></f:convertDateTime>
+                            <f:convertDateTime pattern="dd MM yyyy"></f:convertDateTime>
                         </p:outputLabel>
                     </p:column>
                     <p:column style="text-align: left;"  >
@@ -104,7 +104,7 @@
                             <p:outputLabel value="Paid At" />
                         </f:facet>
                         <p:outputLabel value="#{b.paidBill.createdAt}" >
-                            <f:convertDateTime  timeZone="Asia/Colombo" pattern="dd MM yyyy hh:mm:ss a" ></f:convertDateTime>
+                            <f:convertDateTime  timeZone="Asia/Colombo" pattern="dd MM yyyy" ></f:convertDateTime>
                         </p:outputLabel>
                     </p:column>
 
