--- a/src/main/webapp/channel/channel_report_by_fee_1.xhtml
+++ b/src/main/webapp/channel/channel_report_by_fee_1.xhtml
@@ -40,12 +40,12 @@
                             <f:facet name="header" >
                                 <p:outputLabel value="Income By Fee type By Session Date " />
                                 <h:outputLabel class="ml-3" value=" From : " style=" white-space:pre-line;"/>
-                                <h:outputLabel  value="#{channelReportController.fromDate}" >
-                                    <f:convertDateTime pattern="dd MMM yyyy HH:mm a"/>
+                                <h:outputLabel class="ml-2"  value="#{channelReportController.fromDate}" >
+                                    <f:convertDateTime pattern="dd MMMM yyyy HH:mm:ss"/>
                                 </h:outputLabel>                          
                                 <h:outputLabel value="&emsp;&emsp;To :"/>
-                                <h:outputLabel  value="#{channelReportController.toDate}" >
-                                    <f:convertDateTime pattern="dd MMM yyyy HH:mm a"/>
+                                <h:outputLabel class="ml-2"  value="#{channelReportController.toDate}" >
+                                    <f:convertDateTime pattern="dd MMMM yyyy HH:mm:ss"/>
                                 </h:outputLabel>
                             </f:facet>
                             <p:column>
