--- a/src/main/webapp/channel/channel_report_patient_count_income_with_doc.xhtml
+++ b/src/main/webapp/channel/channel_report_patient_count_income_with_doc.xhtml
@@ -64,12 +64,13 @@
                                     <h:outputLabel value="#{sessionController.institution.name}"/> <br/>
 
                                     <h:outputLabel value="Channel Hospital Income"/><br/>
-                                    <h:outputLabel  value="#{channelReportController.fromDate}" >
-                                        <f:convertDateTime pattern="dd MMM yyyy HH:mm a"/>
+                                    <h:outputLabel value="From :"/>
+                                    <h:outputLabel class="ml-2"  value="#{channelReportController.fromDate}" >
+                                        <f:convertDateTime pattern="dd MMMM yyyy HH:mm:ss"/>
                                     </h:outputLabel>                          
                                     <h:outputLabel value="&emsp;&emsp;To :"/>
-                                    <h:outputLabel  value="#{channelReportController.toDate}" >
-                                        <f:convertDateTime pattern="dd MMM yyyy HH:mm a"/>
+                                    <h:outputLabel class="ml-2"  value="#{channelReportController.toDate}" >
+                                        <f:convertDateTime pattern="dd MMMM yyyy HH:mm:ss"/>
                                     </h:outputLabel>
                                 </f:facet>
                                 <p:columnGroup type="header">
