--- a/src/main/webapp/channel/income_with_agent_bookings.xhtml
+++ b/src/main/webapp/channel/income_with_agent_bookings.xhtml
@@ -20,14 +20,14 @@
                                 inputStyleClass="form-control"
                                 showTime="true"
                                 value="#{channelReportController.fromDate}" 
-                                pattern="dd MMMM yyyy hh:mm:ss a"></p:datePicker> 
+                                pattern="dd MMMM yyyy HH:mm:ss"></p:datePicker> 
                             <h:outputLabel value="To : " />
                             <p:datePicker 
                                 class="w-100"
                                 inputStyleClass="form-control"
                                 showTime="true"
                                 value="#{channelReportController.toDate}" 
-                                pattern="dd MMMM yyyy hh:mm:ss a"></p:datePicker>
+                                pattern="dd MMMM yyyy HH:mm:ss"></p:datePicker>
                             <h:outputLabel  value="Institution"  ></h:outputLabel>
                             <p:autoComplete  value="#{channelReportController.institution}" 
                                              completeMethod="#{institutionController.completeIns}" 
@@ -47,12 +47,12 @@
 
                                     <h:outputLabel value="#{channelReportController.institution.name}"/>
                                     <h:outputLabel value="From : " />
-                                    <h:outputLabel  value="#{channelReportController.fromDate}" >
-                                        <f:convertDateTime pattern="dd MMM yyyy HH:mm a"/>
+                                    <h:outputLabel class="ml-2"  value="#{channelReportController.fromDate}" >
+                                        <f:convertDateTime pattern="dd MMMM yyyy HH:mm:ss"/>
                                     </h:outputLabel>                          
                                     <h:outputLabel value="&emsp;&emsp;To :"/>
-                                    <h:outputLabel  value="#{channelReportController.toDate}" >
-                                        <f:convertDateTime pattern="dd MMM yyyy HH:mm a"/>
+                                    <h:outputLabel class="ml-2"  value="#{channelReportController.toDate}" >
+                                        <f:convertDateTime pattern="dd MMMM yyyy HH:mm:ss"/>
                                     </h:outputLabel>
                                 </f:facet>
 
