Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/pharmacy/admin/index.xhtml
+++ b/src/main/webapp/pharmacy/admin/index.xhtml
@@ -159,10 +159,10 @@
                                     <p:tab title="2) Institutions">
 
                                         <div class="d-grid gap-2">
-                                            <p:commandButton class="w-100" ajax="false" value="Manufacturers" action="pharmacy_manufacturer" ></p:commandButton>
-                                            <p:commandButton class="w-100" ajax="false" value="Importers" action="pharmacy_importer" ></p:commandButton>
-                                            <p:commandButton class="w-100" ajax="false" value="Distributor" action="pharmacy_dealer" ></p:commandButton>                                
-                                            <p:commandButton class="w-100" ajax="false" value="Item Distributors" action="pharmacy_items_distributors" ></p:commandButton>
+                                            <p:commandButton class="w-100" ajax="false" value="Manufacturers" action="/pharmacy/pharmacy_manufacturer" ></p:commandButton>
+                                            <p:commandButton class="w-100" ajax="false" value="Importers" action="/pharmacy/pharmacy_importer" ></p:commandButton>
+                                            <p:commandButton class="w-100" ajax="false" value="Supplier" action="/pharmacy/pharmacy_dealer" ></p:commandButton>                                
+                                            <p:commandButton class="w-100" ajax="false" value="Item Suppliers" action="/pharmacy/pharmacy_items_distributors" ></p:commandButton>
                                         </div>
                                     </p:tab>
                                     <p:tab title="3) Categories">
