--- a/src/main/webapp/pharmacy/pharmacy_importer.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_importer.xhtml
@@ -11,64 +11,63 @@
     <ui:define name="subcontent">
 
         <h:panelGroup >
-            <h:form>
-                <p:panel header="Manage Pharmacy Importers">
-                    <h:form  enctype="multipart/form-data">
-                        <h:outputLabel value="Upload Attendance" ></h:outputLabel>
-                        <p:fileUpload value="#{pharmacyItemExcelManager.file}" mode="simple"/>
-                        <p:commandButton ajax="false" value="Submit" action="#{pharmacyItemExcelManager.importToExcel()}">
+            <h:form  >
+                <p:growl />
+                <p:focus id="selectFocus" context="gpSelect" />
+                <p:focus id="detailFocus" context="gpDetail" />
 
-                        </p:commandButton>
-                    </h:form>
-                    <p:dataTable value="#{ampController.items}" var="i" rowKey="r" >
-                        <p:column headerText="No" >
-                            <h:outputLabel value="#{r +1 }" ></h:outputLabel>
-                        </p:column>
-                        <p:column headerText="Category" >
-                            <h:outputLabel value="#{i.category.name}" ></h:outputLabel>
-                        </p:column>
-                        <p:column headerText="Item Name" >
-                            <h:outputLabel value="#{i.staff.person.name}" ></h:outputLabel>
-                        </p:column>
-                        <p:column headerText="Code" >
-                            <h:outputLabel value="#{i.recordTimeStamp}" >
-                                <f:convertDateTime pattern="dd MMM yyyy hh:mm:ss" />
-                            </h:outputLabel>
-                        </p:column>
-                        <p:column headerText="Generic" >
-                            <h:outputLabel value="#{i.recordTimeStamp}" >
-                                <f:convertDateTime pattern="dd MMM yyyy hh:mm:ss" />
-                            </h:outputLabel>
-                        </p:column>
-                        <p:column headerText="Strength" >
-                            <h:outputLabel value="#{i.recordTimeStamp}" >
-                                <f:convertDateTime pattern="dd MMM yyyy hh:mm:ss" />
-                            </h:outputLabel>
-                        </p:column>
-                        <p:column headerText="Pack" >
-                            <h:outputLabel value="#{i.recordTimeStamp}" >
-                                <f:convertDateTime pattern="dd MMM yyyy hh:mm:ss" />
-                            </h:outputLabel>
-                        </p:column>
-                        <p:column headerText="Distributor" >
-                            <h:outputLabel value="#{i.recordTimeStamp}" >
-                                <f:convertDateTime pattern="dd MMM yyyy hh:mm:ss" />
-                            </h:outputLabel>
-                        </p:column>
-                    </p:dataTable>
 
+
+                <p:panel header="Manage Pharmecy Importers" >
+                    <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop">
+
+                        <h:panelGrid id="gpSelect" columns="1"  >
+                            <p:panel >
+                                <h:panelGrid id="gpSelectText" >
+                                    <h:selectOneListbox  id="lstSelect"   size="10" value="#{importerController.current}" style="min-width: 223px">
+                                        <f:selectItems  value="#{importerController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
+                                        <f:ajax render="gpDetail" execute="lstSelect" >
+                                        </f:ajax>
+                                    </h:selectOneListbox>
+                                </h:panelGrid>
+                                <h:panelGrid id="gpSelectButtons" columns="3"  >
+                                    <h:commandButton id="btnAdd" value="Add" action="#{importerController.prepareAdd()}" styleClass="buttons" >
+                                        <f:ajax render="btnAdd  btnDelete btnSave   lstSelect gpDetail detailFocus" execute="" >
+                                        </f:ajax>
+                                    </h:commandButton>
+                                    <h:commandButton id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                                return false;" action="#{importerController.delete()}"  value="Delete"  >
+                                    </h:commandButton>
+                                </h:panelGrid>
+                            </p:panel>
+                        </h:panelGrid  >
+
+                        <p:panel>
+                            <h:panelGrid id="gpDetail" columns="1" >
+                                <h:panelGrid id="gpDetailText" columns="2">
+                                    <h:outputText id="lblName" value="Name" ></h:outputText>
+                                    <h:inputText autocomplete="off" id="txtName" value="#{importerController.current.name}"  ></h:inputText>
+                                    <h:outputText id="lblCode" value="Code" ></h:outputText>
+                                    <h:inputText autocomplete="off" id="txtCode" value="#{importerController.current.institutionCode}"  ></h:inputText>
+                                    <h:outputText  value="Adress" ></h:outputText>
+                                    <h:inputText autocomplete="off"  value="#{importerController.current.address}"  ></h:inputText>
+                                    <h:outputText  value="Phone" ></h:outputText>
+                                    <h:inputText autocomplete="off"  value="#{importerController.current.phone}"  ></h:inputText>
+                                </h:panelGrid>
+                                <h:panelGrid id="gpDetailButtons" columns="2">
+                                    <h:commandButton id="btnSave" value="Save" action="#{importerController.saveSelected()}" styleClass="buttons">
+                                        <f:ajax render="btnAdd  btnDelete btnSave   lstSelect gpDetail selectFocus"  execute="gpDetail" >
+                                        </f:ajax>
+                                    </h:commandButton>
+                                    <p:defaultCommand target="btnSave"/>
+                                </h:panelGrid>
+                            </h:panelGrid>
+                        </p:panel>
+                    </h:panelGrid>
                 </p:panel>
             </h:form>
 
-
         </h:panelGroup>
-
-        <h:form>
-            <p:commandButton ajax="false" value="Remove duplicate AMPPs" action="#{pharmacyItemExcelManager.removeDuplicateAmpps}" >
-
-            </p:commandButton>
-        </h:form>
-
 
     </ui:define>
 
