--- a/src/main/webapp/pharmacy/admin/atm_multiple.xhtml
+++ b/src/main/webapp/pharmacy/admin/atm_multiple.xhtml
@@ -10,7 +10,8 @@
         <h:form  >
 
             <!-- For ATMs -->
-            <p:dataTable 
+            <p:dataTable
+                id="tblatms"
                 value="#{pharmacyController.atms}" 
                 var="i"
                 selection="#{pharmacyController.atmsSelected}"
@@ -23,15 +24,26 @@
                 rowsPerPageTemplate="5,10,{ShowAll|'All'}"
                 >
                 <f:facet name="header">
-                    <div class="d-flex justify-content-between align-items-center">
-                        <h:outputText value="ATMs" />
-                        <p:commandButton 
-                            value="Remove Selected" 
-                            action="#{pharmacyController.deleteMultipleAtms()}"
-                            ajax="false"
-                            onclick="if (!confirm('Are you sure you want to delete this record?'))
+                   
+
+                        <div class="d-flex align-items-center justify-content-between">
+                             <h:outputText value="ATMs" />
+                            <div class="d-flex justify-content-end align-items-center">
+                                <h:commandButton
+                                    class="btn btn-success mx-2"
+                                    value="Download">
+                                    <p:dataExporter type="xlsx" target="tblatms" fileName="atms_list"/> 
+                                </h:commandButton>
+                                <h:commandButton 
+                                    class="btn btn-danger"
+                                    value="Remove Selected" 
+                                    action="#{pharmacyController.deleteMultipleAtms()}"
+                                    onclick="if (!confirm('Are you sure you want to delete this record?'))
                                         return false;" 
-                            />
+                                    />
+                            </div>
+                
+
                     </div>
                 </f:facet>
                 <p:column 
@@ -45,14 +57,14 @@
                     <h:outputText value="#{i.name}" ></h:outputText>
                 </p:column>
                 <p:column headerText="Actions" >
-                    <p:commandButton 
-                        ajax="false" 
+                    <h:commandButton 
+                        class="btn btn-warning"
                         value="Delete" 
                         action="#{pharmacyController.deleteSingleAtm()}" >
                         <f:setPropertyActionListener 
                             value="#{i}" 
                             target="#{pharmacyController.atm}" ></f:setPropertyActionListener>
-                    </p:commandButton>
+                    </h:commandButton>
                 </p:column>
             </p:dataTable>
 
