--- a/src/main/webapp/pharmacy/admin/atm_multiple.xhtml
+++ b/src/main/webapp/pharmacy/admin/atm_multiple.xhtml
@@ -56,7 +56,7 @@
                     filterMatchMode="contains">
                     <h:outputText value="#{i.name}" ></h:outputText>
                 </p:column>
-                <p:column headerText="Actions" >
+                <p:column headerText="Actions" exportable="false" >
                     <h:commandButton 
                         class="btn btn-warning"
                         value="Delete" 
