--- a/src/main/webapp/pharmacy/admin/amp_multiple.xhtml
+++ b/src/main/webapp/pharmacy/admin/amp_multiple.xhtml
@@ -10,6 +10,7 @@
         <h:form  >
 
             <p:dataTable 
+                id="tblamps"
                 value="#{pharmacyController.amps}" 
                 var="i"
                 selection="#{pharmacyController.ampsSelected}"
@@ -22,16 +23,25 @@
                 rowsPerPageTemplate="5,10,{ShowAll|'All'}"
                 >
                 <f:facet name="header">
-                    <div class="d-flex justify-content-between align-items-center">
+
+
+                    <div class="d-flex align-items-center justify-content-between">
                         <h:outputText value="AMPs" />
-                        <p:commandButton 
-                            value="Remove Selected" 
-                            action="#{pharmacyController.deleteMultipleAmps()}"
-                            ajax="false"
-                            onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                        return false;" 
-                            />
-                    </div>
+                        <div class="d-flex justify-content-end align-items-center">
+                            <h:commandButton
+                                class="btn btn-success mx-2"
+                                value="Download">
+                                <p:dataExporter type="xlsx" target="tblamps" fileName="vtm_list"/> 
+                            </h:commandButton>
+                            <h:commandButton 
+                                class="btn btn-danger"
+                                value="Remove Selected" 
+                                action="#{pharmacyController.deleteMultipleAmps()}"
+                                onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                            return false;"  
+                                />
+                        </div>
+                    </div> 
                 </f:facet>
                 <p:column 
                     selectionMode="multiple" width="50" >
@@ -50,15 +60,15 @@
                     filterMatchMode="contains">
                     <h:outputText value="#{i.vmp.name}" ></h:outputText>
                 </p:column>
-                <p:column headerText="Actions" >
-                    <p:commandButton 
-                        ajax="false" 
+                <p:column headerText="Actions" exportable="false">
+                    <h:commandButton 
+                        class="btn btn-warning text-white"
                         value="Delete" 
                         action="#{pharmacyController.deleteSingleAmp()}" >
                         <f:setPropertyActionListener 
                             value="#{i}" 
                             target="#{pharmacyController.amp}" ></f:setPropertyActionListener>
-                    </p:commandButton>
+                    </h:commandButton>
                 </p:column>
             </p:dataTable>
 
