--- a/src/main/webapp/pharmacy/admin/vmpp_multiple.xhtml
+++ b/src/main/webapp/pharmacy/admin/vmpp_multiple.xhtml
@@ -11,6 +11,7 @@
 
             <!-- For Vmpp -->
             <p:dataTable 
+                id="tblvmpp"
                 value="#{pharmacyController.vmpps}" 
                 var="i"
                 selection="#{pharmacyController.vmppsSelected}"
@@ -25,13 +26,20 @@
                 <f:facet name="header">
                     <div class="d-flex justify-content-between align-items-center">
                         <h:outputText value="Vmpps" />
-                        <p:commandButton 
+                    <div class="d-flex justify-content-end align-items-center">
+                        <h:commandButton
+                            class="btn btn-success mx-2"
+                            value="Download">
+                            <p:dataExporter type="xlsx" target="tblvmpp" fileName="vmpp_list"/> 
+                        </h:commandButton>
+                        <h:commandButton 
                             value="Remove Selected" 
+                            class="btn btn-danger"
                             action="#{pharmacyController.deleteMultipleVmpps()}"
-                            ajax="false"
                             onclick="if (!confirm('Are you sure you want to delete this record?'))
                                         return false;" 
                             />
+                    </div>
                     </div>
                 </f:facet>
                 <p:column 
@@ -44,15 +52,15 @@
                     filterMatchMode="contains">
                     <h:outputText value="#{i.name}" ></h:outputText>
                 </p:column>
-                <p:column headerText="Actions" >
-                    <p:commandButton 
-                        ajax="false" 
-                        value="Delete" 
+                <p:column headerText="Actions" exportable="false">
+                    <h:commandButton
+                        value="Delete"
+                        class="btn btn-warning text-white"
                         action="#{pharmacyController.deleteSingleVmpp()}" >
                         <f:setPropertyActionListener 
                             value="#{i}" 
                             target="#{pharmacyController.vmpp}" ></f:setPropertyActionListener>
-                    </p:commandButton>
+                    </h:commandButton>
                 </p:column>
             </p:dataTable>
 
