--- a/src/main/webapp/pharmacy/admin/ampp_multiple.xhtml
+++ b/src/main/webapp/pharmacy/admin/ampp_multiple.xhtml
@@ -11,6 +11,7 @@
 
             <!-- For AMPPs -->
             <p:dataTable 
+                id="tblampps"
                 value="#{pharmacyController.ampps}" 
                 var="i"
                 selection="#{pharmacyController.amppsSelected}"
@@ -23,16 +24,25 @@
                 rowsPerPageTemplate="5,10,{ShowAll|'All'}"
                 >
                 <f:facet name="header">
-                    <div class="d-flex justify-content-between align-items-center">
-                        <h:outputText value="AMPPs" />
-                        <p:commandButton 
-                            value="Remove Selected" 
-                            action="#{pharmacyController.deleteMultipleAmpps()}"
-                            ajax="false"
-                            onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                        return false;" 
-                            />
+
+                    <div class="d-flex align-items-center justify-content-between">
+                        <h:outputText value="VTMs" />
+                        <div class="d-flex justify-content-end align-items-center">
+                            <h:commandButton
+                                class="btn btn-success mx-2"
+                                value="Download">
+                                <p:dataExporter type="xlsx" target="tblampps" fileName="vtm_list"/> 
+                            </h:commandButton>
+                            <h:commandButton 
+                                class="btn btn-danger"
+                                value="Remove Selected" 
+                                action="#{pharmacyController.deleteMultipleAmpps()}"
+                                onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                            return false;" 
+                                />
+                        </div>
                     </div>
+
                 </f:facet>
                 <p:column 
                     selectionMode="multiple" width="50" >
@@ -45,14 +55,15 @@
                     <h:outputText value="#{i.name}" ></h:outputText>
                 </p:column>
                 <p:column headerText="Actions" >
-                    <p:commandButton 
+                    <h:commandButton 
+                        class="btn btn-warning text-white"
                         ajax="false" 
                         value="Delete" 
                         action="#{pharmacyController.deleteSingleAmpp()}" >
                         <f:setPropertyActionListener 
                             value="#{i}" 
                             target="#{pharmacyController.ampp}" ></f:setPropertyActionListener>
-                    </p:commandButton>
+                    </h:commandButton>
                 </p:column>
             </p:dataTable>
 
