--- a/src/main/webapp/pharmacy/admin/ampp_multiple.xhtml
+++ b/src/main/webapp/pharmacy/admin/ampp_multiple.xhtml
@@ -54,10 +54,9 @@
                     filterMatchMode="contains">
                     <h:outputText value="#{i.name}" ></h:outputText>
                 </p:column>
-                <p:column headerText="Actions" >
+                <p:column headerText="Actions" exportable="false" >
                     <h:commandButton 
                         class="btn btn-warning text-white"
-                        ajax="false" 
                         value="Delete" 
                         action="#{pharmacyController.deleteSingleAmpp()}" >
                         <f:setPropertyActionListener 
