Signed-off-by: PasinduW99 <pwathsara@gmail.com>

--- a/src/main/webapp/channel/channel_report_by_bill_class_all.xhtml
+++ b/src/main/webapp/channel/channel_report_by_bill_class_all.xhtml
@@ -75,7 +75,7 @@
                             <p:outputLabel value="Crteated Date" />
                         </f:facet>
                         <p:outputLabel value="#{b.createdAt}" >
-                            <f:convertDateTime pattern="dd MM yyyy"></f:convertDateTime>
+                            <f:convertDateTime pattern="dd-MM-yyyy"></f:convertDateTime>
                         </p:outputLabel>
                     </p:column>
                     <p:column style="text-align: left;"  >
@@ -83,7 +83,7 @@
                             <p:outputLabel value="Appoinment Date" />
                         </f:facet>
                         <p:outputLabel value="#{b.singleBillSession.sessionDate}" >
-                            <f:convertDateTime  timeZone="Asia/Colombo" pattern="dd MM yyyy" ></f:convertDateTime>
+                            <f:convertDateTime  timeZone="Asia/Colombo" pattern="dd-MM-yyyy" ></f:convertDateTime>
                         </p:outputLabel>
                     </p:column>
                     <p:column>
@@ -104,7 +104,7 @@
                             <p:outputLabel value="Paid At" />
                         </f:facet>
                         <p:outputLabel value="#{b.paidBill.createdAt}" >
-                            <f:convertDateTime  timeZone="Asia/Colombo" pattern="dd MM yyyy" ></f:convertDateTime>
+                            <f:convertDateTime  timeZone="Asia/Colombo" pattern="dd-MM-yyyy" ></f:convertDateTime>
                         </p:outputLabel>
                     </p:column>
 
